fix animação não ativar por overflow-y-scroll em elemento pai

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 body
 {
-    background: linear-gradient(45deg,#69c1db,#54acc7,#6fcae6,#7fcae0);
+    background: linear-gradient(45deg,#69c1db,#54acc7,#6fcae6,#7fcae0) fixed;
 }
 h1
 {
     font-family: 'Ubuntu';
-/*     text-shadow: 1px 1px 6px black;
- */    overflow: visible !important;
+    overflow: visible !important;
 }
 p
 {
@@ -20,7 +19,10 @@ code
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
 }
 ::-webkit-scrollbar {
-    width: 1em;
+    display: block;
+    position: absolute;
+    left: 50%; transform: translateX(-50%);
+    width: .5em;
   }
    
   ::-webkit-scrollbar-track {
